compiler/testData/diagnostics/tests/multiplatform/topLevelFun/conflictingHeaderDeclarations.fir.kt
// MODULE: m1-common
// FILE: common.kt

<!CONFLICTING_OVERLOADS, CONFLICTING_OVERLOADS{METADATA}, NO_ACTUAL_FOR_EXPECT{JVM}!>expect fun foo()<!>
<!CONFLICTING_OVERLOADS, CONFLICTING_OVERLOADS{METADATA}, NO_ACTUAL_FOR_EXPECT{JVM}!>expect fun foo()<!>

<!NO_ACTUAL_FOR_EXPECT{JVM}!>expect fun foo(x: Int)<!>
